--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -56,13 +56,13 @@
   --font-body: 'Open Sans', sans-serif;
 
   /* Font sizes */
-  --big-font-size: 2rem;
+  --big-font-size: 2.5rem;
   --h1-font-size: 2rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1.125rem;
-  --normal-font-size: 1rem;
-  --small-font-size: 20px;
-  --smaller-font-size: 16px;
+  --h2-font-size: 1.5rem;
+  --h3-font-size: 1.25rem;
+  --normal-font-size: 1rem;      /* 16px par défaut */
+  --small-font-size: 0.875rem;   /* ~14px */
+  --smaller-font-size: 0.75rem;  /* ~12px */
 
   /* Font weight */
   --font-medium: 500;
@@ -101,13 +101,13 @@ body.dark-theme {
 /* Font size for large devices */
 @media screen and (min-width: 968px) {
   :root {
-    --big-font-size: 3rem;
-    --h1-font-size: 2.25rem;
-    --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
-    --normal-font-size: 1rem;
-    --small-font-size: 0.875rem;
-    --smaller-font-size: 0.813rem;
+    --big-font-size: 4rem;
+    --h1-font-size: 2.30rem;
+    --h2-font-size: 1.80rem;
+    --h3-font-size: 1.7rem;
+    --normal-font-size: 1.5rem; 
+    --small-font-size: 1.5rem;
+    --smaller-font-size: 1.rem;
   }
 }
 
